--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
         <section class="assingment">
             <img src="images/Screenshot for problem statement.png">
-            
+            <section class="assignment-details">
+                <h2>Problem Statement: Parking Spots</h2>
+                <p>Many students and general car owners struggle to find parking in Columbia without getting cited parking tickets or paying exorbitant rates to just leave a car anywhere from a few minutes or days at a time. Our solution should provide users the information necessary to find the best possible parking for their needs.</p>
+                <a href="files/ProblemStatement.pdf">Problem Statement PDF</a>
+            </section>
         </section>
     </body>
 </html>
