--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="files/Affinitydiagram.pdf"><img src="images/Affinitydiagram.png"></a>
             <section class="assignment-details">
                 <h2>Affinity Diagram: Parking Spots</h2>
-                <p>My squad and I created an affinity diagram to brainstorm ideas about our parkings app.</p>
+                <p>My squad and I created an affinity diagram to brainstorm ideas about our parking spot app.</p>
                 <a href="files/Affinitydiagram.pdf">Affinity Diagram PDF</a>
             </section>
         </section>
