--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSC 190: Jackson Hansel</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Jackson Hansel's CSC 190 Site</h1>
