--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <h1>Jackson Hansel's CSC 190 Site</h1>
         <!-- Problem Statement-->
         <section class="assingment">
-            <a href="files/ProblemStatement.pdf"><img height="300px" width="300px" src="images/Screenshot for problem statement.png"></a>
+            <a href="files/Team 10 Problem Statement.pdf"><img height="300px" width="300px" src="images/Screenshot for problem statement.png"></a>
             <section class="assignment-details">
                 <h2>Problem Statement: Parking Spots</h2>
                 <p>Many students and general car owners struggle to find parking in Columbia without getting cited parking tickets or paying exorbitant rates to just leave a car anywhere from a few minutes or days at a time. Our solution should provide users the information necessary to find the best possible parking for their needs.</p>
-                <a href="files/ProblemStatement.pdf">Problem Statement PDF</a>
+                <a href="files/Team 10 Problem Statement.pdf">Problem Statement PDF</a>
             </section>
         </section>
         <!-- Affinity Diagram-->
