--- a/csc 190/index.html
+++ b/csc 190/index.html
@@ -2,26 +2,36 @@
 <html>
     <head>
         <title>CSC 190: Jackson Hansel</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Jackson Hansel's CSC 190 Site</h1>
         <!-- Problem Statement-->
         <section class="assingment">
-            <a href="files/ProblemStatement.pdf"><img src="images/Screenshot for problem statement.png"></a>
+            <a href="files/Team 10 Problem Statement.pdf"><img height="300px" width="300px" src="images/Screenshot for problem statement.png"></a>
             <section class="assignment-details">
                 <h2>Problem Statement: Parking Spots</h2>
                 <p>Many students and general car owners struggle to find parking in Columbia without getting cited parking tickets or paying exorbitant rates to just leave a car anywhere from a few minutes or days at a time. Our solution should provide users the information necessary to find the best possible parking for their needs.</p>
-                <a href="files/ProblemStatement.pdf">Problem Statement PDF</a>
+                <a href="files/Team 10 Problem Statement.pdf">Problem Statement PDF</a>
             </section>
         </section>
         <!-- Affinity Diagram-->
         <section class="assingment">
-            <a href="files/Affinitydiagram.pdf"><img src="images/Affinitydiagram.png"></a>
+            <a href="files/Affinitydiagram.pdf"><img height="300px" width="300px" src="images/Affinitydiagram.png"></a>
             <section class="assignment-details">
                 <h2>Affinity Diagram: Parking Spots</h2>
-                <p>My squad and I created an affinity diagram to brainstorm ideas about our parkings app.</p>
+                <p>My squad and I created an affinity diagram to brainstorm ideas about our parking spot app.</p>
                 <a href="files/Affinitydiagram.pdf">Affinity Diagram PDF</a>
             </section>
         </section>
+                <!-- Personna  Assignment-->
+                <section class="assingment">
+                    <a href="files/Personas.pdf"><img height="300px" width="300px" src="images/Personas.png"></a>
+                    <section class="assignment-details">
+                        <h2>Personna: 3 Personnas for parking spot app</h2>
+                        <p>Different personnas that would use our parking spot app.</p>
+                        <a href="files/Personas.pdf">Personnas PDF</a>
+                    </section>
+                </section>
     </body>
 </html>
