--- a/index.html
+++ b/index.html
@@ -24,5 +24,14 @@
                 <a href="files/Affinitydiagram.pdf">Affinity Diagram PDF</a>
             </section>
         </section>
+                <!-- Personna  Assignment-->
+                <section class="assingment">
+                    <a href="files/Personas.pdf"><img height="300px" width="300px" src="images/Personas.png"></a>
+                    <section class="assignment-details">
+                        <h2>Personna: 3 Personnas for parking spot app</h2>
+                        <p>Different personnas that would use our parking spot app.</p>
+                        <a href="files/Personas.pdf">Personnas PDF</a>
+                    </section>
+                </section>
     </body>
 </html>
