--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
                 <a href="files/Affinitydiagram.pdf">Affinity Diagram PDF</a>
             </section>
         </section>
-                <!-- Personna  Assignment-->
-                <section class="assingment">
-                    <a href="files/Personas.pdf"><img height="300px" width="300px" src="images/Personas.png"></a>
-                    <section class="assignment-details">
-                        <h2>Personna: 3 Personnas for parking spot app</h2>
-                        <p>Different personnas that would use our parking spot app.</p>
-                        <a href="files/Personas.pdf">Personnas PDF</a>
-                    </section>
+            <!-- Personna  Assignment-->
+             <section class="assingment">
+                <a href="files/Personas.pdf"><img height="300px" width="300px" src="images/Personas.png"></a>
+                <section class="assignment-details">
+                    <h2>Personna: 3 Personnas for parking spot app</h2>
+                    <p>Different personnas that would use our parking spot app.</p>
+                    <a href="files/Personas.pdf">Personnas PDF</a>
                 </section>
+            </section>
+            <!-- Storyboard  Assignment-->
+            <section class="assingment">
+                <a href="files/Storyboards.pdf"><img height="300px" width="300px" src="images/Storyboard.png"></a>
+                <section class="assignment-details">
+                    <h2>Storyboard: 4 Storyboards of possible parking spot app users.</h2>
+                    <p>My group and I made storyboards to depict possible users of our parking spot app.</p>
+                    <a href="files/Storyboards.pdf">Storyboards PDF</a>
+                </section>
+            </section>
     </body>
 </html>
